1. Update favicon to custom logo in assets folder 2. Override viewheight in pages with navbar to prevent vertical scrollbar 3. Adjusted so Logo and links sit inline on all screen sizes 4. Added best practice for table alignment

--- a/cityweather-app/src/app/components/home/home.component.css
+++ b/cityweather-app/src/app/components/home/home.component.css
@@ -12,3 +12,7 @@ form {
   flex-direction: column;
   gap: 0.5rem;
 }
+
+.animated-bg {
+   height: calc(100vh - 86px);
+}
